examples/hello-world/vue/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-vue
  namespace: apps
spec:
  selector:
    app: hello-vue
  ports:
    - port: 80
      targetPort: 8080
