examples/hello-world/vue/manifest/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hello-vue
  namespace: apps
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`hello-vue-apps.example.com`)
      kind: Rule
      services:
        - name: hello-vue
          port: 80
